scss/user-card.scss
// RESET
.user-card {
  all: initial;
  position: absolute;
  .btn {
    margin: 0;
  }
  * {
    font-family: var(--font-family);
  }
  .card-row:not(.first-row) {
    margin-top: 0;
  }
  .card-avatar-placeholder {
    border: 6px solid var(--secondary);
    width: 100px;
    height: 100px;
    position: relative;
    top: -50px;
  }
}
// END RESET

.d-user-card {
  margin: 1em auto;
  width: 480px;
  border-radius: 5px;
  box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.1);
  z-index: 1102;
  background: var(--user-background);
  background-color: var(--secondary);
  background-size: 150%;
  background-position: 50% 50%;
  &__header {
    width: calc(100% - 1em);
    height: 75px;
    padding: 0.5em;
    border-top-right-radius: 5px;
    border-top-left-radius: 5px;
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    justify-content: space-between;
  }
  &__header.avatar-background {
    backdrop-filter: blur(100px);
    -webkit-backdrop-filter: blur(50px);
  }
  &__badges {
    display: flex;
    border-radius: 4px;
    gap: 0.5em;
    height: 15px;
    margin-left: auto;
  }
  &__badges .user-badge {
    background-color: transparent;
    border: none;
    margin-top: 0;
    padding: 0;
    font-size: var(--font-down-2);
  }
  &__badges .user-card-badge-link {
    display: flex;
    padding: 4px 6px;
    background-color: rgba(var(--secondary-rgb), 1);
    border-radius: 4px;
    height: 15px;
  }
  &__badges .user-card-badge-link:hover {
    background-color: var(--secondary-very-high);
  }
  &__badges .badge-display-name {
    display: none;
  }
  &__badges-more {
    font-size: var(--font-down-1);
    display: flex;
    padding: 4px 6px;
    background-color: rgba(var(--secondary-rgb), 1);
    border-radius: 4px;
    height: 15px;
  }
  &__badges-more:hover {
    background-color: var(--secondary-very-high);
  }
  &__badges-more a {
    font-size: var;
    color: var(--primary);
  }
  &__edit-btn {
    border: none;
    line-height: normal;
    box-sizing: border-box;
    padding: 0.5em 0.65em;
    display: inline-flex;
    align-items: center;
    justify-content: center;
    font-size: 14px;
    font-weight: normal;
    color: var(--primary);
    background-color: var(--primary-low);
    cursor: pointer;
    transition: all 0.25s;
    gap: 0.5em;
    opacity: 50%;
    &:hover {
      opacity: 100%;
    }
  }
  &__badge .fa-crab {
    color: var(--danger);
  }
  &__badge .fa-fish {
    color: var(--success);
  }
  &__badge .fa-bird {
    --fa-primary-color: var(--tertiary);
    --fa-secondary-color: var(--highlight-high);
  }
  &__badge .fa-bowl-scoop {
    --fa-primary-color: var(--danger-low);
    --fa-secondary-color: var(--love);
    --fa-secondary-opacity: 1;
  }
  &__main-content {
    padding: 0.5em 1em 1em 1em;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    background-color: var(--secondary);
    border-bottom-right-radius: 5px;
    border-bottom-left-radius: 5px;
  }
  &__main-content-top {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-content: center;
    flex: 1 1 min-content;
  }
  &__main-content-bottom {
    flex: 1 1 auto;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: flex-end;
    gap: 1em;
    margin-top: 1em;
  }
  &__id {
    display: flex;
    height: 50px;
    position: relative;
    max-width: calc(480px - 2em);
    flex-wrap: wrap;
  }
  &__avatar {
    height: 50px;
  }
  &__id .d-user-card__avatar + div {
    position: relative;
    margin-right: 1em;
  }
  &__id .avatar-flair {
    width: 40px;
    height: 40px;
    background-size: 40px 40px;
    position: absolute;
    left: -30px;
    bottom: 0;
    display: flex;
    align-items: center;
    justify-content: center;
    background-repeat: no-repeat;
    background-position: center;
  }
  &__id .avatar-flair.rounded {
    background-size: 30px 30px;
    border-radius: 24px;
    width: 40px;
    height: 40px;
  }
  &__id .avatar-flair .fa {
    font-size: var(--font-up-4);
  }
  &__avatar img {
    width: 100px;
    height: 100px;
    border-radius: 50%;
    position: relative;
    top: -50px;
  }
  &__avatar + .user-status-message {
    left: 75px;
    bottom: 0;
    position: absolute;
    border-radius: 50%;
    border: 4px solid var(--secondary);
    background-color: var(--secondary);
  }
  &__id-titles {
    margin-left: 0.5em;
    gap: 0.25em;
    color: var(--primary);
    flex: 1 1;
    max-width: calc(100% - 120px - 0.5em)
  }
  &__id-titles:visited {
    color: var(--primary);
  }
  &__id-titles:hover {
    color: var(--primary);
  }
  &__titles-top {
    display: flex;
    flex-direction: row;
    gap: 0.25em;
  }
  &__titles-bottom {
    display: flex;
    flex-direction: row;
    gap: 0.25em;
  }
  &__name {
    font-weight: bold;
    font-size: var(--font-up-2);
  }
  &__user-link {
    cursor: pointer;
  }
  &__user-name {
    display: inline-block;
    font-size: var(--font-0);
    display: flex;
  }
  &__user-title {
    flex: 1 1 auto;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
  }
  &__user-link {
    color: var(--primary);
  }
  &__relative-time {
    display: flex;
    flex-direction: row;
    align-items: center;
    width: min-content;
    background-color: rgba(var(--secondary-rgb),0.5);
    padding: 0.25em 0.325em;
    border-radius: 4px;
    gap: 0.5em;
  }
  &__time {
    color: var(--primary);
    width: max-content;
    font-size: var(--font-down-2);
  }
  &__location {
    width: max-content;
    text-align: right;
    font-size: var(--font-down-2);
    color: var(--primary);
  }
  &__user-content {
    width: auto;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    margin-top: 1em;
    color: var(--primary);
  }
  &__featured-topic {
    margin-bottom: 0.5em;
    font-size: var(--font-down-1);
  }
  &__featured-topic img.emoji {
    height: var(--font-0);
    width: var(--font-0);
  }
  &__featured-topic-data,
  &__featured-topic-data:visited {
    color: var(--primary);
    text-decoration: underline;
  }
  &__suspension {
    color: var(--danger);
    background-color: var(--danger-low);
    font-size: var(--font-down-2);
    margin-bottom: 1em;
    padding: 0.5em;
    border-radius: 5px;
  }
  &__bio {
    margin-bottom: 0.75em;
  }
  &__bio-excerpt {
    display: -webkit-box;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
    overflow: hidden;
    font-size: var(--font-0);
  }
  &__bio-excerpt img.emoji:not(.only-emoji) {
    height: var(--font-0);
    width: var(--font-0);
  }
  &__custom-fields {
    border-top: 1px solid var(--primary-200);
    border-bottom: 1px solid var(--primary-200);
    padding: 0.5em 0;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    font-size: var(--font-down-1);
    margin-bottom: 0.75em;
  }
  &__custom-field-title {
    font-weight: bold;
  }
  &__custom-field-data {
    margin-left: 5px;
  }
  &__custom-field-group {
    display: flex;
    gap: 0.5em;
    flex-wrap: wrap;
  }
  &__field {
    background-color: var(--primary-200);
    padding: 3px 5px;
    display: flex;
    border-radius: 5px;
  }
  &__meta-data {
    display: flex;
    flex-wrap: wrap;
    font-size: var(--font-down-1);
    align-items: center;
  }
  &__website {
    color: var(--primary);
    text-decoration: underline;
    display: flex;
    gap: 0.5em;
    align-content: center;
    margin-right: 1em;
  }
  &__meta-data span:empty {
    display: none;
  }
  &__link {
    text-decoration: underline;
    font-size: var(--font-0);
  }
  &__link,
  &__link:visited,
  &__link:hover {
    color: var(--primary);
  }
  &__cakeday {
    font-size: 14px;
    display: flex;
    align-items: center;
    gap: 0.5em;
  }
  &__controls {
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    list-style: none;
    margin: 0;
    gap: 0.5em;
  }
  &__controls li {
    flex: 1 1;
    min-width: max-content;
  }
  &__controls .chat-button {
    flex: 1 1;
  }
  &__controls .chat-button div {
    display: flex;
  }
  &__controls li:empty {
    display: none;
  }
  &__action {
    display: flex;
  }
  &__button {
    border: none;
    line-height: normal;
    box-sizing: border-box;
    padding: 0.5em 0.65em;
    display: inline-flex;
    align-items: center;
    justify-content: center;
    font-size: 14px;
    font-weight: normal;
    color: var(--primary);
    background-color: var(--primary-low);
    flex-grow: 1;
    cursor: pointer;
    transition: all 0.25s;
    border-radius: 4px;
    margin: 0;
  }
  .user-card-chat-btn {
    border: none;
    line-height: normal;
    box-sizing: border-box;
    padding: 0.5em 0.65em;
    display: inline-flex;
    align-items: center;
    justify-content: center;
    font-weight: normal;
    flex-grow: 1;
    cursor: pointer;
    transition: all 0.25s;
    border-radius: 4px;
    margin: 0;
  }
}

.user-card-additional-buttons-outlet button {
  width: 100%;
  border: none;
  line-height: normal;
  box-sizing: border-box;
  padding: 0.5em 0.65em;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  font-size: 14px;
  font-weight: normal;
  color: var(--primary);
  background-color: var(--primary-low);
  flex-grow: 1;
  cursor: pointer;
  transition: all 0.25s;
  gap: 0.5em;
  border-radius: 4px;
  margin: 0;
}

.user-card-metadata-outlet h3 {
  font-weight: normal;
  background-color: var(--primary-200);
  padding: 3px 5px;
  display: flex;
  border-radius: 5px;
  font-size: var(--font-0);
  span.desc {
    color: var(--primary);
    font-weight: bold;
    margin-right: 5px;
  }
  span.value {
    font-weight: normal;
  }
}

// CUSTOMIZING ANIMATIONS
.d-user-card__placeholder-animation {
  animation-duration: 4s;
  animation-fill-mode: forwards;
  animation-iteration-count: infinite;
  animation-name: placeHolderShimmer;
  animation-timing-function: linear;
  background: var(--primary-very-low);
  background: linear-gradient(to right, var(--primary-very-low) 10%, var(--primary-low) 18%, var(--primary-very-low) 33%);
}

.d-user-card__avatar.d-user-card__placeholder-animation {
  width: 100px;
  height: 100px;
  border-radius: 50%;
  position: relative;
  top: -50px;
}
.d-user-card__titles-top.d-user-card__placeholder-animation {
  height: 20px;
  width: 100%;
}
.d-user-card__titles-bottom.d-user-card__placeholder-animation {
  height: 10px;
  width: 100%;
  margin-top: 0.5em;
}
.card-row.d-user-card__placeholder-animation {
  height: 10px;
  width: 100%;
}

// SMALL SCREENS
@media screen and (max-width: 580px) {
  .d-user-card {
    width: 95vw;
    margin: 0 2.5vw;
    &__controls {
      flex-direction: column;
    }
    &__main-content {
      flex-direction: column;
      padding: 0.5em;
    }
    &__meta-data {
      gap: 0.5em;
    }
    &__website {
      max-width: 70%;
    }
    &__relative-time .d-icon {
      font-size: var(--font-down-1);
    }
  }
}

//  Hide on meta
body:not(.staff) {
  li.select-kit-row[data-name="Experimental User Card Test"] {
    display: none;
  }
}

.user-card-post-names-outlet {
  display: flex;
  // padding: 4px 6px;
  background-color: rgba(var(--secondary-rgb), 0.75);
  border-radius: 4px;
  &:not(:has(*)) {
    display: none;
  }
  &:hover {
  background-color: rgba(var(--secondary-rgb), 1);
  }
}

